--- a/src/app/game.css
+++ b/src/app/game.css
@@ -40,4 +40,6 @@
 
   #menu-container {
     background: url("/splash.png");
-  }
+    background-position: center;
+    background-size: cover;
+    }
