--- a/src/app/game.css
+++ b/src/app/game.css
@@ -12,16 +12,38 @@
     font-size: 24px;
     margin-bottom: 10px;
   }
+
+  h2{
+    font-size: 35px;
+    margin-bottom: 10px;
+    color: rgb(255, 255, 255);
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  }
   
   .game-board {
     background-color: black;
     border: 2px solid white;
   }
   
-  .game-start-text{
-    font-size: 40px;
+  .player1-text{
+    font-size: 20px;
     margin-bottom: 10px;
+    margin-left: 10px;
+    color: rgb(255, 255, 255);
+  }
+
+  .player2-text{
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    color: rgb(255, 255, 255);
+  }
+
+  .game-start-text{
+    font-size: 70px;
+    margin-bottom: 40px;
     font-style:italic;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   }
 
   line {
