--- a/src/app/game.css
+++ b/src/app/game.css
@@ -25,18 +25,19 @@
     border: 2px solid white;
   }
   
-  .player1-text{
+  .winner-text{
     font-size: 20px;
     margin-bottom: 10px;
     margin-left: 10px;
     color: rgb(255, 255, 255);
   }
 
-  .player2-text{
+  .restart-instruction{
     font-size: 20px;
     margin-bottom: 10px;
-    margin-right: 10px;
+    margin-left: 10px;
     color: rgb(255, 255, 255);
+    
   }
 
   .game-start-text{
